Cambios CORS y Swagger
